tests/snapshots/docx/pandoc/0_level_headers.docx.snap
---
source: crates/docspec-docx-reader/tests/snapshots.rs
expression: from_reader_snapshot
---
ReaderFixtureSnapshot {
  events: [
    StartDocument { id: None, language: None, metadata: None },
    StartTable { id: None },
    StartTableRow { id: None },
    StartTableCell { colspan: None, id: None, rowspan: None },
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    EndTableCell,
    EndTableRow,
    StartTableRow { id: None },
    StartTableCell { colspan: None, id: None, rowspan: None },
    StartParagraph { alignment: None, id: None },
    Text { content: "User’s Guide" },
    EndParagraph,
    EndTableCell,
    EndTableRow,
    StartTableRow { id: None },
    StartTableCell { colspan: None, id: None, rowspan: None },
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    EndTableCell,
    EndTableRow,
    StartTableRow { id: None },
    StartTableCell { colspan: None, id: None, rowspan: None },
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    EndTableCell,
    EndTableRow,
    StartTableRow { id: None },
    StartTableCell { colspan: None, id: None, rowspan: None },
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    EndTableCell,
    EndTableRow,
    StartTableRow { id: None },
    StartTableCell { colspan: None, id: None, rowspan: None },
    StartParagraph { alignment: None, id: None },
    Text { content: "11 August 2017" },
    EndParagraph,
    EndTableCell,
    EndTableRow,
    StartTableRow { id: None },
    StartTableCell { colspan: None, id: None, rowspan: None },
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    EndTableCell,
    EndTableRow,
    StartTableRow { id: None },
    StartTableCell { colspan: None, id: None, rowspan: None },
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    EndTableCell,
    EndTableRow,
    StartTableRow { id: None },
    StartTableCell { colspan: None, id: None, rowspan: None },
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    EndTableCell,
    EndTableRow,
    StartTableRow { id: None },
    StartTableCell { colspan: None, id: None, rowspan: None },
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    EndTableCell,
    EndTableRow,
    EndTable,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    StartHeading { id: None, level: 1 },
    Text { content: "CONTENTS" },
    EndHeading,
    StartParagraph { alignment: None, id: None },
    StartTextStyle { kind: Bold, id: None },
    Text { content: "Section" },
    EndTextStyle,
    StartTextStyle { kind: Bold, id: None },
    Text { content: "\t" },
    Text { content: "Page" },
    EndTextStyle,
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "FIGURES" },
    Text { content: "\t" },
    Text { content: "iv" },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "TABLES" },
    Text { content: "\t" },
    Text { content: "v" },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "SECTION 1" },
    Text { content: "\t" },
    Text { content: "Introduction" },
    Text { content: "\t" },
    Text { content: "2" },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    StartHeading { id: None, level: 1 },
    Text { content: "FIGURES" },
    EndHeading,
    StartParagraph { alignment: None, id: None },
    StartTextStyle { kind: Bold, id: None },
    Text { content: "Figure" },
    EndTextStyle,
    StartTextStyle { kind: Bold, id: None },
    Text { content: "\t" },
    Text { content: "Page" },
    EndTextStyle,
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    StartTextStyle { kind: Bold, id: None },
    Text { content: "No table of figures entries found." },
    EndTextStyle,
    EndParagraph,
    StartHeading { id: None, level: 1 },
    Text { content: "TABLES" },
    EndHeading,
    StartParagraph { alignment: None, id: None },
    StartTextStyle { kind: Bold, id: None },
    Text { content: "Table" },
    EndTextStyle,
    StartTextStyle { kind: Bold, id: None },
    Text { content: "\t" },
    Text { content: "Page" },
    EndTextStyle,
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    StartTextStyle { kind: Bold, id: None },
    Text { content: "No table of figures entries found." },
    EndTextStyle,
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    StartHeading { id: None, level: 1 },
    Text { content: "Introduction" },
    EndHeading,
    StartParagraph { alignment: None, id: None },
    Text { content: "Nothing to introduce, yet." },
    EndParagraph,
    EndDocument,
  ],
  terminal: Ok,
}
