tests/snapshots/docx/pandoc/adjacent_codeblocks.docx.snap
---
source: crates/docspec-docx-reader/tests/snapshots.rs
expression: from_reader_snapshot
---
ReaderFixtureSnapshot {
  events: [
    StartDocument { id: None, language: None, metadata: None },
    StartParagraph { alignment: None, id: None },
    Text { content: "Next, open the terminal window. Using the terminal window, run the \"" },
    Text { content: "ifconfig" },
    Text { content: " -a\" command to list all the interfaces on your system, as shown here." },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "\t" },
    EndParagraph,
    StartPreformatted { id: None, syntax: None },
    Text { content: "# ifconfig -a" },
    LineBreak,
    Text { content: "eth0      Link encap:Ethernet  HWaddr 00:0c:29:69:12:7c  " },
    LineBreak,
    Text { content: "          inet addr:172.16.0.108  Bcast:172.16.0.255  Mask:255.255.255.0" },
    LineBreak,
    Text { content: "          inet6 addr: fc00:660:0:1:20c:29ff:fe69:127c/64 Scope:Global" },
    LineBreak,
    Text { content: "          inet6 addr: fe80::20c:29ff:fe69:127c/64 Scope:Link" },
    LineBreak,
    Text { content: "          UP BROADCAST RUNNING MULTICAST  MTU:1500  Metric:1" },
    LineBreak,
    Text { content: "          RX packets:9859 errors:0 dropped:0 overruns:0 frame:0" },
    LineBreak,
    Text { content: "          TX packets:1399 errors:0 dropped:0 overruns:0 carrier:0" },
    LineBreak,
    Text { content: "          collisions:0 txqueuelen:1000 " },
    LineBreak,
    Text { content: "          RX bytes:1920894 (1.8 MiB)  TX bytes:233088 (227.6 KiB)" },
    LineBreak,
    Text { content: "          Interrupt:19 Base address:0x2000 " },
    LineBreak,
    LineBreak,
    Text { content: "lo        Link encap:Local Loopback  " },
    LineBreak,
    Text { content: "          inet addr:127.0.0.1  Mask:255.0.0.0" },
    LineBreak,
    Text { content: "          inet6 addr: ::1/128 Scope:Host" },
    LineBreak,
    Text { content: "          UP LOOPBACK RUNNING  MTU:65536  Metric:1" },
    LineBreak,
    Text { content: "          RX packets:372 errors:0 dropped:0 overruns:0 frame:0" },
    LineBreak,
    Text { content: "          TX packets:372 errors:0 dropped:0 overruns:0 carrier:0" },
    LineBreak,
    Text { content: "          collisions:0 txqueuelen:0 " },
    LineBreak,
    Text { content: "          RX bytes:22320 (21.7 KiB)  TX bytes:22320 (21.7 KiB)" },
    LineBreak,
    LineBreak,
    Text { content: "wlan0     Link encap:Ethernet  HWaddr 00:c0:ca:85:00:ba  " },
    LineBreak,
    Text { content: "          UP BROADCAST RUNNING MULTICAST  MTU:1500  Metric:1" },
    LineBreak,
    Text { content: "          RX packets:0 errors:0 dropped:0 overruns:0 frame:0" },
    LineBreak,
    Text { content: "          TX packets:0 errors:0 dropped:0 overruns:0 carrier:0" },
    LineBreak,
    Text { content: "          collisions:0 txqueuelen:1000 " },
    LineBreak,
    Text { content: "          RX bytes:0 (0.0 B)  TX bytes:0 (0.0 B)" },
    EndPreformatted,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "The ALFA wireless card is represented by the \"wlan0\" interface." },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "In addition to the interfaces shown in the " },
    Text { content: "ifconfig" },
    Text { content: " output, there is " },
    Text { content: "another" },
    Text { content: " interface known as the " },
    StartTextStyle { kind: Italic, id: None },
    Text { content: "wireless physical interface" },
    EndTextStyle,
    Text { content: ". " },
    Text { content: "We can identify this interface by listing the contents of the " },
    Text { content: "/sys/class/ieee80211" },
    Text { content: " directory, as shown" },
    Text { content: "." },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "\t" },
    EndParagraph,
    StartPreformatted { id: None, syntax: None },
    Text { content: "# ls /sys/class/ieee80211/" },
    LineBreak,
    Text { content: "phy0" },
    EndPreformatted,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "The \"phy0\" interface is the parent interface used to create child interfaces. Note that if you unplug and " },
    Text { content: "replug" },
    Text { content: " the USB interface, the \"" },
    Text { content: "phy" },
    Text { content: "\" interface number will increment by one until you reboot your system." },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    EndDocument,
  ],
  terminal: Ok,
}
