tests/snapshots/docx/pandoc/already_auto_ident.docx.snap
---
source: crates/docspec-docx-reader/tests/snapshots.rs
expression: from_reader_snapshot
---
ReaderFixtureSnapshot {
  events: [
    StartDocument { id: None, language: None, metadata: None },
    StartParagraph { alignment: None, id: None },
    Text { content: "Anchor Header" },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "A" },
    Text { content: " " },
    StartLink { href: "#anchor-header", id: None, title: None },
    Text { content: "link" },
    EndLink,
    EndParagraph,
    EndDocument,
  ],
  terminal: Ok,
}
