tests/snapshots/docx/pandoc/block_quotes.docx.snap
---
source: crates/docspec-docx-reader/tests/snapshots.rs
expression: from_reader_snapshot
---
ReaderFixtureSnapshot {
  events: [
    StartDocument { id: None, language: None, metadata: None },
    StartHeading { id: None, level: 2 },
    Text { content: "Some block quotes, in different ways" },
    EndHeading,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "This is the proper way, with a style" },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    StartBlockQuote { id: None },
    Text { content: "I don’t know why this would be in italics, but so it appears to be on my screen." },
    EndBlockQuote,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "And this is also a proper way, with a different style" },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    StartBlockQuote { id: None },
    Text { content: "This is called the Intense Quote style." },
    EndBlockQuote,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "And this is the way that most people do it:" },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "I just indented this, so it looks like a block quote. I think this is how most people do block quotes in their documents." },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "And back to the normal  style." },
    EndParagraph,
    EndDocument,
  ],
  terminal: Ok,
}
