tests/snapshots/docx/pandoc/comments.docx.snap
---
source: crates/docspec-docx-reader/tests/snapshots.rs
expression: from_reader_snapshot
---
ReaderFixtureSnapshot {
  events: [
    StartDocument { id: None, language: None, metadata: None },
    StartParagraph { alignment: None, id: None },
    Text { content: "I want " },
    Text { content: "some text to have a comment " },
    Text { content: "on it." },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "This is " },
    Text { content: "a new paragraph." },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "And so" },
    Text { content: " is this." },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "One " },
    Text { content: "more" },
    Text { content: "." },
    Text { content: " And this is one with a " },
    Text { content: "comment in a comment" },
    Text { content: "." },
    EndParagraph,
    EndDocument,
  ],
  terminal: Ok,
}
