tests/snapshots/docx/pandoc/compact-style-removal.docx.snap
---
source: crates/docspec-docx-reader/tests/snapshots.rs
expression: from_reader_snapshot
---
ReaderFixtureSnapshot {
  events: [
    StartDocument { id: None, language: None, metadata: None },
    StartOrderedListItem { id: Some("1001"), level: 0, start: Some(1), style_type: Decimal },
    StartParagraph { alignment: None, id: None },
    Text { content: "One" },
    EndParagraph,
    EndOrderedListItem,
    StartOrderedListItem { id: Some("1001"), level: 0, start: None, style_type: Decimal },
    StartParagraph { alignment: None, id: None },
    Text { content: "Two" },
    EndParagraph,
    EndOrderedListItem,
    StartOrderedListItem { id: Some("1001"), level: 0, start: None, style_type: Decimal },
    StartParagraph { alignment: None, id: None },
    Text { content: "Three" },
    EndParagraph,
    EndOrderedListItem,
    StartOrderedListItem { id: Some("1001"), level: 0, start: None, style_type: Decimal },
    StartParagraph { alignment: None, id: None },
    Text { content: "Four" },
    EndParagraph,
    EndOrderedListItem,
    EndDocument,
  ],
  terminal: Ok,
}
