tests/snapshots/docx/pandoc/cross_reference.docx.snap
---
source: crates/docspec-docx-reader/tests/pandoc_corpus.rs
expression: snapshot
---
ReaderFixtureSnapshot {
  events: [
       0: StartDocument { id: None, language: None, metadata: None }
       1: StartHeading { id: None, level: 1 }
       2: Text { content: "TITLE" }
       3: EndHeading
       4: StartParagraph { alignment: None, id: None }
       5: EndParagraph
       6: StartParagraph { alignment: None, id: None }
       7: EndParagraph
       8: StartParagraph { alignment: None, id: None }
       9: EndParagraph
      10: StartParagraph { alignment: None, id: None }
      11: EndParagraph
      12: StartParagraph { alignment: None, id: None }
      13: EndParagraph
      14: StartParagraph { alignment: None, id: None }
      15: EndParagraph
      16: StartParagraph { alignment: None, id: None }
      17: Text { content: "Cross-reference: " }
      18: Text { content: "TIT" }
      19: Text { content: "L" }
      20: Text { content: "E" }
      21: EndParagraph
      22: EndDocument
  ],
  terminal: Ok,
}
